充值提现 转账 以及记录查询相关 UI 界面

--- a/assets/style/theme/textfield.scss
+++ b/assets/style/theme/textfield.scss
@@ -466,6 +466,11 @@ $input-tiny: (
             padding: 9px 0 7px;
           }
         }
+        .v-input__slot:before,
+        .v-input__slot:after {
+          border-style: none;
+          visibility: hidden;
+        }
       }
 
       .v-text-field__details {
