--- a/assets/style/_vars/_colors.scss
+++ b/assets/style/_vars/_colors.scss
@@ -4,7 +4,7 @@ $white-opacity-50: rgba(255, 255, 255, 0.5);
 $white-opacity-80: rgba(255, 255, 255, 0.8);
 
 // exchange
-$exchange-sell: #d24632; //#BE4634;
+$exchange-sell: #d24632;
 $exchange-buy: #6dbb49;
 $exchange-normal: #ffffff;
 $exchange-highlight: #ff9143;
