--- a/assets/style/theme/table.scss
+++ b/assets/style/theme/table.scss
@@ -181,7 +181,7 @@ $table-large: (
           &:not(.v-datatable__expand-row):not(:last-child) {
             box-shadow: inset 0 -1px 0 0 rgba(map-get($main, noir), 0.2);
           }
-          &:hover {
+          &:hover:not(.v-data-table__empty-wrapper) {
             background: rgba(map-get($main, white), 0.04) !important;
             td {
               color: rgba(map-get($main, white), 1);
